# wallabagapi

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CONTRIBUTING.md  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  wallabag_mock.py
wallabag_api/: __init__.py  wallabag.py  wallabag_test.py
wallabagapi/: __init__.py  core.py  wallabag.py  wallabag_test.py
