[metadata]
name=wallabag_api
description="Wallabag API to add every pages you want to your Wallabag account"
author=폭스마스크
author_email=foxmask+git@pm.me
url=https://gitlab.com/foxmask/wallabag_api
long_description=file: README.md
long_description_content_type=text/markdown
license=WTFPL
keywords=service python httpx
version=1.3.0
download_url=https://gitlab.com/foxmask/wallabag_api/-/archive/1.3.0/wallabag_api-1.3.0.zip

classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Communications

[options]
zip_safe=false

include_package_data=true

install_requires=
    httpx>=0.18.2


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
ignore = E402, F401
