[metadata]
name=wallabag_api
description="Wallabag API to add every pages you want to your Wallabag account"
author=폭스마스크
author_email=foxmask+git@pm.me
url=https://github.com/foxmask/wallabagapi
long_description=file: README.md
long_description_content_type=text/markdown
license=WTFPL
keywords=
version=file: VERSION.txt

classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Communications
    Topic :: Database

[options]
zip_safe=false

include_package_data=true

install_requires=
    httpx>=0.19.0


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
ignore = E402, F401
